[metadata]
name=dihedral_fragments

[options]
package_dir=
	=src
packages=find:
install_requires =
    atb_outputs @ git+ssh://git@github.com/ATB-UQ/atb_outputs
	algorithm @ git+ssh://git@github.com/ATB-UQ/algorithm
	atb_api_public @ git+ssh://git@github.com/ATB-UQ/atb_api_public
	cairosvg
	fragment_capping @ git+ssh://git@github.com/ATB-UQ/fragment_capping

[options.packages.find]
where=src
